<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">シズルノート</string>
    <string name="app_full_name">シズルノート</string>
    <string name="title_chara_list">キャラ</string>
    <string name="title_equipment">装備</string>
    <string name="title_quest">クエスト</string>
    <string name="title_clan_battle">クラバト</string>
    <string name="title_calendar">カレンダー</string>
    <string name="title_menu">メニュー</string>
    <string name="title_setting">設定</string>
    <string name="title_minion">召喚物</string>
    <string name="title_dungeon">ダンジョン</string>
    <string name="title_log">ログ</string>
    <string name="title_enemy">モンスター</string>
    <string name="title_rank_comparison">ランク比較</string>
    <string name="title_hatsune_stage">イベント</string>
    <string name="title_hatsune_wave">イベント</string>
    <string name="title_community">コミュニティ</string>
    <string name="title_sp_event">SPイベント</string>
    <string name="title_secret_dungeon">SPダンジョン</string>
    <string name="community_dialog_title">コミュニティに参加</string>
    <string name="community_dialog_text">コミュニティに参加しましょう\n（飛び先中国語注意）</string>
    <string name="do_not_show_anymore">今度から表示しない</string>
    <string name="title_analyze">データ分析</string>
    <string name="setting_language" translatable="false">Language</string>
    <string name="setting_language_dialog_title">Language</string>
    <string-array name="setting_language_options">
        <item>日本語</item>
        <item>简体中文</item>
        <item>한국어</item>
        <item>English</item>
    </string-array>
    <string-array name="setting_language_values">
        <item>ja</item>
        <item>zh</item>
        <item>ko</item>
        <item>en</item>
    </string-array>
    <string-array name="setting_server_options">
        <item>日本鯖</item>
        <item>大陸鯖</item>
    </string-array>
    <string-array name="setting_server_values">
        <item>jp</item>
        <item>cn</item>
    </string-array>
    <string name="setting_kill_expression_title">スキル計算式</string>
    <string-array name="setting_kill_expression_options">
        <item>値</item>
        <item>計算式</item>
        <item>オリジナル</item>
    </string-array>
    <string-array name="setting_kill_expression_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="setting_limit_clan_battle_num">クラバトの表示数を制限</string>
    <string name="setting_limit_clan_battle_num_description">最も近い13期のクラバトデータのみを表示、ロード時間を短縮できます</string>
    <string name="setting_kill_expression_summary">スキルアクションの計算式を表示</string>
    <string name="setting_appearance">表示</string>
    <string name="setting_system">システム</string>
    <string name="setting_server">サーバー</string>
    <string name="setting_server_dialog_title">サーバー切り替え</string>
    <string name="setting_db_version">データベースバージョン</string>
    <string name="setting_app_version">アプリバージョン</string>
    <string name="setting_re_download_db">データベースを再ダウンロード</string>
    <string name="setting_re_download_db_summary">通常の状況下ではこの機能を使う必要がありません</string>
    <string name="setting_about">シズルノートについて</string>
    <string name="about_version" translatable="false">Version: %s</string>
    <string name="about_disclaimer" translatable="false">This is an unofficial fan-made application, copyright of all resources associate with the game \"Princess Connect Re:Dive\" are belong to Cygames, Inc. </string>
    <string name="about_hp" translatable="false">Open source homepage \nhttps://github.com/MalitsPlus/ShizuruNotes</string>
    <string name="about_developer" translatable="false">Development &lt;br/>Vibbit&lt;a href=\"https://twitter.com/L8102259\">@L8102259&lt;/a></string>
    <string name="about_translator" translatable="false">Localization &lt;br/>(Korean)applemintia&lt;a href=\"https://twitter.com/_applemintia\">@_applemintia&lt;/a>&lt;br/>(English)&lt;a href=\"https://twitter.com/southro_p\">southrop&lt;/a>&lt;br/>(English)&lt;a href=\"https://github.com/MightyZanark\">MightyZanark&lt;/a></string>
    <string name="about_api" translatable="false">API by https://redive.estertion.win</string>
    <string name="about_license" translatable="false">This application is licensed under the &lt;a href=\"http://www.apache.org/licenses/LICENSE-2.0.txt\">Apache License 2.0&lt;/a></string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="db_update_dialog_title">データベース更新</string>
    <string name="db_update_dialog_text">データベースの新しいバージョンがあります、今すぐ更新しますか？</string>
    <string name="db_update_dialog_confirm">更新</string>
    <string name="db_update_dialog_cancel">あとで</string>
    <string name="db_update_progress_title">データベース更新</string>
    <string name="db_update_progress_text">アップデート中…</string>
    <string name="db_update_finished_title">データベース更新</string>
    <string name="db_update_download_finished_text">ダウンロード完了、解凍中…</string>
    <string name="db_update_finished_text">アップデート完了しました</string>
    <string name="db_update_duplicate">アップデートが完了しましたが、データは更新されてません。数分後また試してみてください</string>
    <string name="db_update_check_failed">データベースのアップデートチェックが失敗しました、詳細はログを参照してください</string>
    <string name="db_update_failed">データベースのアップデートが失敗しました、詳細はログを参照してください</string>
    <string name="app_update_check_failed">アプリのアップデートチェックが失敗しました</string>
    <string name="chara_load_failed">データの初期化が失敗しました、詳細はログを参照してください</string>
    <string name="abnormal_exit_message">前回実行した時に致命的なエラーが発生しました、詳細はログを参照してください</string>
    <string name="ui_text_filter">絞り込み</string>
    <string name="ui_text_position">位置</string>
    <string name="ui_text_atk_type">タイプ</string>
    <string name="ui_text_sort">ソート</string>
    <string name="ui_text_all">ALL</string>
    <string name="ui_chip_position_forward">前衛</string>
    <string name="ui_chip_position_middle">中衛</string>
    <string name="ui_chip_position_rear">後衛</string>
    <string name="ui_chip_atk_type_physical">物理</string>
    <string name="ui_chip_atk_type_magical">魔法</string>
    <string name="ui_btn_reset">リセット</string>
    <string name="ui_chip_any">ALL</string>
    <string name="ui_chip_sort_new">更新日</string>
    <string name="ui_chip_sort_position">ポジション</string>
    <string name="ui_chip_sort_physical_atk">物理攻撃力</string>
    <string name="ui_chip_sort_magical_atk">魔法攻撃力</string>
    <string name="ui_chip_sort_physical_def">物理防御力</string>
    <string name="ui_chip_sort_magical_def">魔法防御力</string>
    <string name="ui_chip_sort_physical_critical">物理クリ</string>
    <string name="ui_chip_sort_magical_critical">魔法クリ</string>
    <string name="ui_chip_sort_hp">HP</string>
    <string name="ui_chip_sort_effective_physical_hp">物理有効HP</string>
    <string name="ui_chip_sort_effective_magical_hp">魔法有効HP</string>
    <string name="ui_chip_sort_tp_up">TP上昇</string>
    <string name="ui_chip_sort_tp_reduce">TP減軽</string>
    <string name="ui_chip_sort_age">年齢</string>
    <string name="ui_chip_sort_height">身長</string>
    <string name="ui_chip_sort_weight">体重</string>
    <string name="ui_chip_sort_burst_size">バストサイズ</string>
    <string name="ui_chip_sort_way_up">昇順</string>
    <string name="ui_chip_sort_way_down">降順</string>
    <string name="ui_switch_change_value">表示切替</string>
    <string name="snack_bar_cant_sort">データが不十分のためこのソートはまだ使えません</string>
    <string name="button_minion_info">召喚物情報</string>
    <string name="text_normal_attack_only">通常攻撃のみ</string>
    <string name="text_level" translatable="false">Lv.</string>
    <string name="text_loop_start" translatable="false">（</string>
    <string name="text_loop_end" translatable="false">）</string>
    <string name="tab_phase">フェーズ&#160;</string>
    <string name="text_year">年</string>
    <string name="text_month">月</string>
    <string name="text_day">日</string>
    <string name="text_physical_effective_hp">&#160;物理有効HP&#160;</string>
    <string name="text_magical_effective_hp">&#160;魔法有効HP&#160;</string>
    <string name="text_physical_damage_cut">&#160;物理ダメカット&#160;</string>
    <string name="text_magical_damage_cut">&#160;魔法ダメカット&#160;</string>
    <string name="text_critical_rate">&#160;クリティカル率&#160;</string>
    <string name="text_hp_absorb_rate">&#160;HP吸収率&#160;</string>
    <string name="text_recovery_up_rate">&#160;回復上昇倍率&#160;</string>
    <string name="text_tp_up_rate">&#160;TP上昇倍率&#160;</string>
    <string name="text_accuracy_rate">&#160;命中率&#160;</string>
    <string name="text_dodge_rate">&#160;回避率&#160;</string>
    <string name="text_tp_per_action">&#160;TP / 行動&#160;</string>
    <string name="text_tp_remain">&#160;TP保留値&#160;</string>
    <string name="text_status">&#160;ステータス&#160;</string>
    <string name="text_physical_atk">&#160;物理攻撃力&#160;</string>
    <string name="text_magical_atk">&#160;魔法攻撃力&#160;</string>
    <string name="text_physical_crt">&#160;物理クリティカル&#160;</string>
    <string name="text_magical_crt">&#160;魔法クリティカル&#160;</string>
    <string name="text_physical_def">&#160;物理防御力&#160;</string>
    <string name="text_magical_def">&#160;魔法防御力&#160;</string>
    <string name="text_hp">&#160;HP&#160;</string>
    <string name="text_life_steal">&#160;HP吸収&#160;</string>
    <string name="text_energy_recovery">&#160;TP上昇&#160;</string>
    <string name="text_energy_reduce">&#160;TP消費軽減&#160;</string>
    <string name="text_accuracy">&#160;命中&#160;</string>
    <string name="text_dodge">&#160;回避&#160;</string>
    <string name="text_wave_hp_recovery">&#160;HP自動回復&#160;</string>
    <string name="text_wave_energy_recovery">&#160;TP自動回復&#160;</string>
    <string name="text_physical_penetrate">&#160;物理貫通&#160;</string>
    <string name="text_magical_penetrate">&#160;魔法貫通&#160;</string>
    <string name="text_hp_recovery">&#160;回復量上昇&#160;</string>
    <string name="text_search_area_width">&#160;攻撃距離&#160;</string>
    <string name="text_status_tips">*上記のステータスは☆MAX、装備&amp;専用装備フル強化、ストーリーステータス&amp;Exスキル&amp;Rank Bonusを含めての値になります。</string>
    <string name="text_attack_pattern">&#160;行動パターン%d&#160;</string>
    <string name="text_normal_mode">通常モード</string>
    <string name="text_cast_time">待機時間：</string>
    <string name="text_cool_time">クールタイム：</string>
    <string name="text_skill_action">スキルアクション</string>
    <string name="text_profile">プロフィール</string>
    <string name="text_age">&#160;年齢&#160;</string>
    <string name="text_guild">&#160;ギルド&#160;</string>
    <string name="text_race">&#160;種族&#160;</string>
    <string name="text_height">&#160;身長&#160;</string>
    <string name="text_weight">&#160;体重&#160;</string>
    <string name="text_birth_date">&#160;誕生日&#160;</string>
    <string name="text_blood_type">&#160;血液型&#160;</string>
    <string name="text_favorite">&#160;趣味&#160;</string>
    <string name="text_cv">&#160;CV&#160;</string>
    <string name="text_catch_copy">キャッチコピー</string>
    <string name="text_please_download_db">データベースをダウンロードしてください</string>
    <string name="icon_previous">前回の選択</string>
    <string name="icon_cancel_all">クリア</string>
    <string name="hatsune">イベント</string>
    <string name="tower">ルナの塔</string>
    <string name="dungeon">ダンジョン</string>
    <string name="before_summary">前日朝5時（GMT+9）、通知のみ</string>
    <string name="before_2_summary">二日前朝5時（GMT+9）、通知のみ</string>
    <string name="today_summary">当日朝5時（GMT+9）、通知のみ</string>
    <string name="last_hour_summary">終了1時間前、通知&amp;バイブ</string>
    <string name="quest_campaign">キャンペーン</string>
    <string name="normal_before_title">ノーマルドロップ前日</string>
    <string name="dungeon_before_2_title">ダンジョンキャンプ</string>
    <string name="dungeon_before_title">ダンジョン前日</string>
    <string name="hatsune_last_title">終了当日</string>
    <string name="hatsune_last_hour_title">終了直前</string>
    <string name="tower_last_title">終了当日</string>
    <string name="tower_last_hour_title">終了直前</string>
    <string name="menu_drop_normal">ノーマル</string>
    <string name="menu_drop_hard">ハード</string>
    <string name="hint_text_search">キャラを検索…</string>
    <string name="hint_text_search_no_result">該当キャラが見つかりませんでした</string>
</resources>